<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"

        android:layout_marginEnd="2dp"
        android:layout_marginBottom="456dp"
        android:contentDescription="@string/textView"
        android:letterSpacing="0.1"
        android:text="@string/textView"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textColorHighlight="#03A9F4"
        android:textColorHint="#0F0C12"
        android:textColorLink="#673AB7"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="429dp"
        android:fontFamily="serif-monospace"
        android:letterSpacing="0.1"
        android:text="@string/username"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="306dp"
        android:fontFamily="serif-monospace"
        android:text="@string/password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="353dp"
        android:autofillHints="username"

        android:background="@drawable/textbox_background"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:letterSpacing="0.1"
        android:padding="16dp"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textboxpassword"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="230dp"
        android:autofillHints="password"
        android:background="@drawable/textbox_background"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:padding="16dp"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="303dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        android:textColor="@color/rowColor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hidenow"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginStart="263dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="266dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".1"
        app:srcCompat="@drawable/hide" />


</androidx.constraintlayout.widget.ConstraintLayout>